Trying to fix navbar style on narrow display - still not quite working.

--- a/races/apps/site/static/site.css
+++ b/races/apps/site/static/site.css
@@ -3,7 +3,7 @@
     width: 100%;
  }
  
-.masthead {
+#masthead {
     margin-top: 60px;
     height: 75px;
     position: relative;
@@ -15,7 +15,7 @@
 
 @media (max-width: 980px) {
     
-    .masthead {
+    #masthead {
         margin-top: 0px;
     }
 }
